tests/types/result/errors/test_err_non_enum_error_type.sushi
# Tests error for non-enum error type
# KNOWN BUG: Compiler does not validate that error type is an enum
# This test currently hits an LLVM IR error instead of a proper type error
# Should emit error during type checking, not during codegen
# TODO: Add validation that error type in | ErrorType must be an enum

struct MyError:
    i32 code

fn test_func() i32 | MyError:
    return Result.Ok(42)

fn main() i32:
    return Result.Ok(0)
